--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "semantic-ui-css": "^2.2.10"
+    "react-scripts": "^5.0.1",
+    "semantic-ui-css": "^2.2.10",
+    "webpack": "^5.85.0"
   },
   "devDependencies": {
-    "json-server": "^0.15.1"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.10",
+    "json-server": "^0.17.3"
   },
   "scripts": {
     "start": "PORT=8000 react-scripts start",
